[project]
name = "dbt-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eddie Flores", email = "gefloresql@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dbt-pipeline = "dbt_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
