[project]
name = "dbt-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eddie Flores", email = "gefloresql@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.12",
    "dagster-dbt>=0.29.12",
    "databricks>=0.2",
    "databricks-sql-connector>=4.2.6",
    "dbt-databricks>=1.12.1",
    "pandas>=2.3.3",
    "requests>=2.34.2",
]

[project.scripts]
dbt-pipeline = "dbt_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.1.1",
    "responses>=0.26.2",
    "ruff>=0.15.20",
]
